# gitty

./: Cargo.toml  README.md
src/: ai.rs  cli.rs  clipboard.rs  config.rs  diff_ui.rs  git.rs  interactive.rs  main.rs  message.rs  prompt.rs  secrets.rs  ui.rs
