[package]
name = "gitty"
version = "0.1.0"
edition = "2024"
description = "Generate excellent Git commit messages with your favorite coding agent"
license = "MIT"
repository = "https://github.com/lassejlv/gitty"
readme = "README.md"
rust-version = "1.88"
keywords = ["git", "commit", "ai", "cli"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
anyhow = "1"
clap = { version = "4.5", features = ["derive", "env"] }
clap_complete = "4.5"
console = "0.16"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
toml = "0.9"
which = "8"

[profile.release]
lto = "thin"
strip = true
